Fixed actions blur spilling into the main frame

--- a/src/styles/components/_actions.scss
+++ b/src/styles/components/_actions.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     z-index: 2;
     gap: 0.5em;
-    padding: 0.47em 0;
+    padding: 0.4em 0;
     background-color: rgba($--white, 0.5);
     backdrop-filter: blur(5px);
     bottom: 0;
