--- a/src/styles/components/_markdown.scss
+++ b/src/styles/components/_markdown.scss
@@ -6,7 +6,7 @@
 	-webkit-text-size-adjust: 100%;
 	margin: 0;
 	font-family: "Roboto Condensed";
-	font-size: 16px;
+	font-size: 0.9em;
 	line-height: 1.5;
 	word-wrap: break-word;
 	width: 100%;
