--- a/src/styles/pages/_blog.scss
+++ b/src/styles/pages/_blog.scss
@@ -1,13 +1,13 @@
 .blog {
     width: 100vw;
-    gap: 3vh;
+    gap: 1em;
     color: $--grey-color;
     overflow-y: auto;
     padding-bottom: $--home-margin-mobile;
 
     &__banner {
         width: 100%;
-        height: 45vh;
+        height: 20em;
         overflow: hidden;
         position: relative;
 
@@ -28,7 +28,7 @@
                 $alpha: -0.3
             );
             color: #dbdbdb;
-            gap: 2vh;
+            gap: 1em;
 
             &__title, &__description {
                 font-family: "Roboto Condensed";
@@ -61,8 +61,7 @@
     }
 
     &__content {
-        padding: 0 5vw;
-        padding-top: 5vh;
+        padding: 1em 2em;
         animation-delay: 0.6s;
 
         .actions {
@@ -88,6 +87,17 @@
 @media only screen and (min-width: $--min-tablet-width) and (max-width: $--min-desktop-width) {
     .blog {
         padding-bottom: $--home-margin;
+
+        &__banner {
+            height: 30em;
+
+            &__image {
+                -webkit-transform: scale(0.6);
+                -moz-transform:    scale(0.6);
+                -o-transform:      scale(0.6);
+                transform:         scale(0.6);
+            }
+        }
 
         &__content {
             .actions {
